# ai-wkflow

./: .gitignore  README.md  app.py  app_web.py  env.example  pyproject.toml  run.sh
config/: correct_and_blog.yaml  correct_audio_transcription.yaml  literature_review_exa.yaml  search_and_blog.yaml  translation_to_cn.yaml  translation_to_eng.yaml
patterns/outliner_wsy/: system.md
patterns/translate_en/: system.md
